--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "type": "module",
   "scripts": {
     "build": "node scripts/build-pages.mjs"
+  },
+  "devDependencies": {
+    "jpeg-js": "^0.4.4",
+    "pngjs": "^7.0.0",
+    "sharp": "^0.33.5"
   }
 }
