--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "build": "node scripts/build-pages.mjs"
   },
   "devDependencies": {
+    "clean-css": "^5.3.3",
+    "html-minifier-terser": "^7.2.0",
     "jpeg-js": "^0.4.4",
     "pngjs": "^7.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "terser": "^5.27.2"
   }
 }
